--- a/yirmi/templates/yirmi/login.html
+++ b/yirmi/templates/yirmi/login.html
@@ -4,27 +4,33 @@
 <div class="container">
     <div class="d-flex justify-content-center h-100">
         <div class="card">
-            <div class="card-body">
+          <div class="card-body">
+            {% if not_user %}
+              <div class="alert alert-danger" role="alert">
+                Kullanıcı Bulunamadı
+              </div>
+            {% endif %}
                 <form method="POST" action="">
                     {% csrf_token %}
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="{{ph_username}}" name="username" required>
+                        <input type="text" class="form-control" placeholder="Kullanıcı Adı" name="username" required>
                     </div>
 
                     <div class="input-group form-group">
+
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
-                        <input type="password" class="form-control" placeholder="{{ph_pw}}" name="password" required>
+                        <input type="password" class="form-control" placeholder="Şifre" name="password" required>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="{{ph_login}}" class="btn float-right login_btn btn-success">
+                        <input type="submit" value="Giriş Yap" class="btn float-right login_btn btn-success">
                     </div>
                     <div class="form-group">
-                        <a class="btn float-left login_btn btn-success" href="{% url 'yirmi:register' %}" role="button" >Register</a>
+                        <a class="btn float-left login_btn btn-success" href="{% url 'yirmi:register' %}" role="button" >Üye Ol</a>
                     </div>
                 </form>
             </div>
