--- a/yirmi/templates/yirmi/register.html
+++ b/yirmi/templates/yirmi/register.html
@@ -8,11 +8,13 @@
 {% block content %}
 <div class="container">
     <h1>Register</h1>
-    <form method="POST" class="form-horizontal">
-        {% csrf_token %}
-        {% bootstrap_form form %}
-        <input type="submit" name="" value="Kayıt ol">
-    </form>
+    <div class="forms-together">
+        <form method="POST" class="form-horizontal">
+            {% csrf_token %}
+            {% bootstrap_form form %}
+            <input type="submit" name="" value="Kayıt ol">
+        </form>
+    </div>
 </div>
 
 
